# CRM-Monolito-Micro_service

./: .env.example  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
Docs/: database_uml.md
Requisitos/: Detalhamentos.md  Fases.md  Impacto.md  Prior.md
Requisitos/Administração e configuração/: HU.md
Requisitos/Atividades e interações/: HU.md
Requisitos/Autenticação e gestão de acesso/: HU.md
Requisitos/Gestão de contas (empresas)/: HU.md
Requisitos/Gestão de contatos/: HU.md
Requisitos/Marketing e gestão de leads/: HU.md
Requisitos/Oportunidades e pipeline de vendas/: HU.md
Requisitos/Qualidade, desempenho e segurança (não funcionais inspirados no modelo SQuaRE)/: HU.md
Requisitos/Relatórios e dashboards/: HU.md
Requisitos/Suporte e atendimento (casos) ID/: HU.md
alembic/: env.py
alembic/versions/: f6ffe9c3a85e_initial.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  security.py
app/modules/accounts/: models.py  router.py  schemas.py  service.py
app/modules/audit/: models.py  router.py  schemas.py  service.py
app/modules/auth/: models.py  router.py  schemas.py  service.py
app/modules/contacts/: models.py  router.py  schemas.py  service.py
app/modules/opportunities/: models.py  router.py  schemas.py  service.py
app/shared/: base_model.py  pagination.py
tests/: conftest.py  test_accounts.py  test_admin_roles.py  test_admin_users.py  test_audit.py  test_auth.py  test_contacts.py  test_health.py  test_opportunities.py
